assets/style.scss
@import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Kalam&family=Poppins&family=Roboto&family=Space+Mono&display=swap");
@import "./theme.scss";

/* 
    font-family: 'DM Sans', sans-serif;
    font-family: 'Poppins', sans-serif;
    font-family: 'Roboto', sans-serif;
*/
/* root styling */

/* Pre load */
:root {
  --light: #121212;
  --dark: #f8f9fa;
  --secondary: #adb5bd;
  --primary-color: #fc4445;
  --secondary-color: #2ec4b6;
  --border: #e9ecef;
  --topcol: rgba(13, 13, 13, 0.7);
  --theme: none;
  --shadow: none;
  --opac: 0.9;
  --grad: linear-gradient(to right, #ff007f, #00ffff);
  // --theme-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/themes/sun.png");
  // --insta-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/social/instaicowhite.png");
}
.preloader {
  position: fixed;
  z-index: 100;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: var(--light);
}

.preloader > svg {
  width: 5%;
  position: absolute;
  top: 50%;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%);
}

.preloader.hideit {
  animation: fadeOut 2s;
  animation-fill-mode: forwards;
}

@keyframes fadeOut {
  100% {
    opacity: 0;
    visibility: hidden;
  }
}

@keyframes fadeIn {
  100% {
    opacity: 1;
    visibility: visible;
  }
}

body {
  font-family: "Roboto", sans-serif;
  padding: 0;
  margin: 0;
  background-color: var(--light);
}
html {
  scroll-behavior: smooth;
}

a {
  text-decoration: none;
}

* > * {
  box-sizing: border-box;
} /* global styling */
.text-light {
  color: var(--light);
}

.text-secondary {
  color: var(--dark);
}

.text-dark {
  color: var(--dark);
}

.text-primary {
  color: var(--primary-color);
}

.bg-light {
  background-color: var(--light);
}

.container {
  max-width: 1200px;

  margin: auto;
}

.img-fluid {
  padding: 1vw;
  height: 600px !important;
  transition: padding 0.5s ease;
}

.img-fluid:hover {
  padding: 0vw;
}

.text-title {
  font-family: "DM Sans", sans-serif !important;
  // font-weight: bold;
}

.secondary-title {
  font-family: "Poppins", sans-serif;
}

.display-1 {
  font-size: 22px;
}

.display-2 {
  font-size: 16px;
}

.display-3 {
  font-size: 14px;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.btn {
  padding: 15px 20px;
  border: none;
}

.btn-primary {
  border-radius: 4px;
  background-color: var(--secondary-color);
}

.object-fit {
  max-height: 120px;
  height: 80px;
  width: 80px;
  object-fit: scale-down;
}

.d-flex {
  display: flex;
}

.flex-wrap {
  flex-wrap: wrap;
}

.justify-content-center {
  justify-content: center;
}

.justify-content-between {
  justify-content: space-between;
}

.mt-2 {
  margin-top: 10px;
}

.mt-3 {
  margin-top: 50px;
}

.mb-3 {
  margin-bottom: 30px;
}

.m-0 {
  margin: 0;
}

.px-1 {
  padding-left: 5px;
  padding-right: 5px;
}

.px-2 {
  padding-left: 20px;
  padding-right: 20px;
}

.py-1 {
  padding-top: 10px;
  padding-bottom: 10px;
}

.py-2 {
  padding-top: 20px;
  padding-bottom: 20px;
}

.py-3 {
  padding-top: 30px;
  padding-bottom: 30px;
}

.thumbnail {
  display: flex;
  padding-top: 20px;
  justify-content: center !important;
}
.thumbnail-image {
  max-width: 90vw;
  max-height: 50vh;
}

.rounded {
  height: 120px;
  width: 120px;
  object-fit: fill;
  border-radius: 99px;
}

.shadow {
  box-shadow: var(--shadow);
}

/* section styling */

/* ------- Sticky ------- */
.sticky {
  position: fixed;
  top: 0;
  z-index: 99;
  width: 100%;
}
/* ------- .Sticky ------- */

/* ------- Navigation Menu ---------- */
.navbar {
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 10px;
}

#svg-icon {
  position: relative;
  width: 100%;
  margin: auto;
}
#icon,
#icon2 {
  -moz-border-radius: 100%;
  -webkit-border-radius: 100%;
  border-radius: 100%;
  background-color: white;
  display: block;
  margin-left: auto;
  margin-right: auto;
}
#icon {
  width: 7vh;
  height: 7vh;
}
#icon2 {
  width: 45px;
  height: 45px;
  transition: all 0.5s;
}
#icon2:hover {
  transition: all 0.5s;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  transform: scale(1.05);
}
.nav-brand {
  font-family: "DM Sans", sans-serif;
  font-weight: bold;
  align-self: center;
  font-size: 32px;
}

.collapse {
  align-self: center;
}
#header {
  position: relative;
  margin-bottom: 2vh;
  background-color: var(--topcol);
}

::-webkit-scrollbar {
  width: 8px;
  background-color: var(--light);
}
::-webkit-scrollbar-thumb {
  background-color: #6b6b6b;
  border-radius: 20px;
  transition: background-color 2s;
}
::-webkit-scrollbar-thumb:hover {
  background-color: #939393;
}

.nav-link {
  transition: color 0.3s;
  font-size: 18px;
  margin: 12px;
  color: var(--dark);
  font-family: "Poppins", sans-serif;
  opacity: var(--opac);
}

.nav-link:hover {
  transition: color 0.15s;
  color: var(--primary-color);
}

.search-box {
  display: inline;
  border-right: 1px solid var(--secondary);
  padding-right: 12px;
  margin-right: 10px;
}

.imgblur {
  filter: blur(10px);
}

.toggle-button {
  font-size: 21px;
  background-color: transparent;
  border: none;
  position: absolute;
  right: 0;
  margin: 8px 10px;
  display: none;
  rotate: 0deg;
}

.toggle-button:focus {
  outline: none;
}

/* ------- .Navigation Menu ---------- */

/* ----------- Main Section ---------- */

#site-main {
  margin-top: 8em;
}

#posts {
  margin-bottom: 5em;
}

.grid {
  margin: 0px;
  text-align: center;
  min-width: 70%;
  max-width: 100%;
  display: grid;
  column-gap: 1rem;
  /* grid-template-columns: auto auto; */
  grid-template-columns: repeat(auto-fit, minmax(22em, 1fr));
  /* grid-auto-rows: 300px; */
}

.grid .grid-item {
  height: fit-content;
  /* height: fit-content; */
  /* width: calc(33.3333% - 20px); */
  margin-bottom: 3em;
}

/* ----------- .Main Section ---------- */

/* ----------- footer ---------- */

#footer .tags a {
  border-radius: 40px;
  padding: 10px 20px;
  font-size: 15px;
}

#footer .copyrights {
  padding: 10px 0;
  border-top: 2px solid var(--light);
}

.footer-title {
  color: var(--dark);
}

/* ----------- .footer ---------- */

/* ----------- article page ------- */

#post {
  margin-bottom: 4em;
}

.post-footer .post-author {
  position: relative;
  margin-top: 4em;
  background-color: var(--light);
}

.post-footer .post-author::after {
  background-color: white;
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 4em;
  z-index: 0;
}

.post-footer .post-author .author-avatar {
  margin: 0 auto;
  margin-bottom: 1em;
  position: inherit;
  z-index: 1;
}

.post-footer .post-comments .reply {
  padding-left: 7em;
}

.form-control {
  width: 100%;
  border: 2px solid var(--border);
  padding: 1em;
  font-size: 18px;
  margin-right: 10px;
  font-family: "Poppins", sans-serif;
}

/* ----------- .article page ------- */
/* ----------- insta icon + theme ------- */

#insta-icon {
  width: 20px;
  height: 20px;
  background-size: cover;
  border-width: 0;
  outline: none;
  transition: scale 0.02s;
  color: var(--dark);
}
#insta-icon:active {
  scale: 0.95;
}
#theme {
  margin-left: 20px;
  width: 20px;
  height: 20px;
  background-size: cover;
  border-width: 0;
  outline: none;
  content: var(--theme-ico);
  transition: scale 0.07s;
  max-width: 20px;
  max-height: 20px;
}

#theme:active {
  scale: 0.75;
}

.ytvid {
  display: flex;
  padding-left: 2vw;
  padding-right: 2vw;
  margin-left: auto;
  margin-right: auto;
  width: 80vw;
  align-self: center;
  height: 50vh;
}
.icon {
  padding-bottom: 2px;
}
/* ----------- .insta icon + theme ------- */
/* ----------- sidebar page ------- */
#sidebar .categories a {
  padding: 1em 3em;
  font-size: 18px;
  margin-bottom: 1em;
  background-color: var(--light);
  border-radius: 99px;
}

#sidebar .categories a:hover {
  background-color: var(--primary-color);
  color: var(--light);
}

/* ----------- .sidebar page ------- */

/* ----------- sticky ------- */

.sticky {
  position: fixed;
  top: 0;
  z-index: 99;
  width: 100%;
}

.sticky + .content {
  padding-top: 60px;
}

/* ----------- .sticky ------- */

/* Media Query */

.row {
  display: flex;
}

.col-3 {
  flex: 0 0 33.3333%;
  max-width: 33.3333%;
  padding-right: 35px;
}

.col-8 {
  flex: 0 0 70%;
  max-width: 70%;
}

.col-4 {
  flex: 0 0 30%;
  max-width: 30%;
}

@media (max-width: 1225px) {
  .display-2 {
    padding-right: 10px;
    padding-left: 10px;
  }
  #footer {
    padding-right: 10px;
    padding-left: 10px;
  }
}

@media (max-width: 1024px) {
  .row {
    flex-wrap: wrap;
  }

  .col-3 {
    flex: 0 0 50%;
    max-width: 50%;
  }

  .col-8 {
    flex: 0 0 100%;
    max-width: 100%;
  }

  .col-4 {
    flex: 0 0 100%;
    max-width: 100%;
  }
}

@media (max-width: 992px) {
  #blob {
    display: none;
  }
  .navbar {
    flex-direction: column;
  }
  .nav-brand {
    position: relative;
    // left: 20px;
  }

  #site-main {
    margin-top: 14em;
  }
}

@media (max-width: 768px) {
  /* .grid .grid-item {
    width: calc(50% - 20px);
  } */
  #footer-bg {
    display: none;
  }

  .nav-brand {
    position: relative;
    // left: 20px;
  }

  .col-3 {
    flex: 0 0 100%;
    max-width: calc(100% - 50px);
    padding-top: 40px 50px;
  }
  /* .grid .grid-item-two {
    padding: 0px;
    width: calc(50% - 20px);
  } */
}

@media (max-width: 574px) {
  .toggle-button {
    display: initial;
    color: var(--dark);
  }
  .HomeGrid {
    grid-template-columns: auto !important;
  }
  .DofeBronzeImage {
    width: 80vw !important;

    text-align: center;
  }
  .DofeBronzeImageContainer {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .TitleText {
    display: flex;
    justify-content: center;
    align-items: center;
    display: inline-grid;
  }
  .nav-brand {
    position: relative;
    // left: 20px;
  }
  .collapse {
    max-height: 0;
    overflow: hidden;
    transition: all 0.4s ease;
  }
  .but-rotate {
    rotate: 0deg;
    transition: all 0.4s;
  }
  .collapse .nav-link {
    display: block;
    text-align: center;
  }

  .collapse-toggle {
    max-height: 500px;
  }
  .but-rotate-toggle {
    rotate: 180deg;
    transition: all 0.4s;
  }
  .img-fluid {
    width: 90vw;
    height: auto;
    margin: none;
  }
  /* 
  .grid .grid-item {
    width: calc(100% - 20px);
  }

  .grid .grid-item-two {
    width: calc(100% - 20px);
    padding: 0px;
  } */

  #site-main {
    margin-top: 6em;
  }
}
@keyframes rotate {
  from {
    rotate: 0deg;
  }

  50% {
    scale: 1 1.2;
  }

  to {
    rotate: 360deg;
  }
}

